Add langchain and langchain_openai to requirements

--- a/5_extraction_examples.ipynb
+++ b/5_extraction_examples.ipynb
@@ -4,13 +4,336 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [How to use reference examples when doing extraction](https://python.langchain.com/docs/how_to/extraction_examples/)"
+    "> # [How to use reference examples when doing extraction](https://python.langchain.com/docs/how_to/extraction_examples/)\n",
+    "---\n",
+    ">  *Build few-shot examples of tool calls to help steer the behavior of extraction & similar applications*\n",
+    "\n",
+    "\n",
+    "* Data extraction → generate [`structured representations`](https://python.langchain.com/docs/concepts/structured_outputs/) of other `unstructured` or `semi-structured`\n",
+    "  \n",
+    "* [LLM Tool-calling](https://python.langchain.com/docs/concepts/tool_calling/) LLM features used!\n",
+    "\n",
+    "* LangChain implements a [tool-call attribute](https://python.langchain.com/api_reference/core/messages/langchain_core.messages.ai.AIMessage.html#langchain_core.messages.ai.AIMessage.tool_calls) on messages from LLMs that include tool calls. \n",
+    "\n",
+    "> ℹ️ See our [how-to guide on tool calling](https://python.langchain.com/docs/how_to/tool_calling/) for more detail\n",
+    "  \n",
+    "* To build **reference examples for data extraction** → build chat history containing a sequence of:\n",
+    "\n",
+    "  * [`HumanMessage`](https://python.langchain.com/api_reference/core/messages/langchain_core.messages.human.HumanMessage.html) containing example inputs\n",
+    "  * [`AIMessage`](https://python.langchain.com/api_reference/core/messages/langchain_core.messages.ai.AIMessage.html) containing example tool calls\n",
+    "  * [`ToolMessage`](https://python.langchain.com/api_reference/core/messages/langchain_core.messages.tool.ToolMessage.html) containing example tool outputs\n",
+    "  \n",
+    "LangChain adopts this convention for **structuring tool calls into conversation across LLM model providers**\n",
+    "\n",
+    "First we build a prompt template that includes a placeholder for these messages:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
+    "\n",
+    "# Define a custom prompt to provide instructions and any additional context.\n",
+    "# 1) You can add examples into the prompt template to improve extraction quality\n",
+    "# 2) Introduce additional parameters to take context into account (e.g., include metadata\n",
+    "#    about the document from which the text was extracted.)\n",
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"You are an expert extraction algorithm. \"\n",
+    "            \"Only extract relevant information from the text. \"\n",
+    "            \"If you do not know the value of an attribute asked \"\n",
+    "            \"to extract, return null for the attribute's value.\",\n",
+    "        ),\n",
+    "        # ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓\n",
+    "        MessagesPlaceholder(\"examples\"),  # <-- EXAMPLES!\n",
+    "        # ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑\n",
+    "        (\"human\", \"{text}\"),\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test out the template:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatPromptValue(messages=[SystemMessage(content=\"You are an expert extraction algorithm. Only extract relevant information from the text. If you do not know the value of an attribute asked to extract, return null for the attribute's value.\", additional_kwargs={}, response_metadata={}), HumanMessage(content='testing 1 2 3', additional_kwargs={}, response_metadata={}), HumanMessage(content='this is some text', additional_kwargs={}, response_metadata={})])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_core.messages import (\n",
+    "    HumanMessage,\n",
+    ")\n",
+    "\n",
+    "prompt.invoke(\n",
+    "    {\"text\": \"this is some text\", \"examples\": [\n",
+    "        HumanMessage(content=\"testing 1 2 3\")]}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "API Reference:[`HumanMessage`](https://python.langchain.com/api_reference/core/messages/langchain_core.messages.human.HumanMessage.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define the schema\n",
+    "Let's re-use the person schema from the [extraction tutorial](https://python.langchain.com/docs/tutorials/extraction/)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List, Optional\n",
+    "\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "from pydantic import BaseModel, Field\n",
+    "\n",
+    "\n",
+    "class Person(BaseModel):\n",
+    "    \"\"\"Information about a person.\"\"\"\n",
+    "\n",
+    "    # ^ Doc-string for the entity Person.\n",
+    "    # This doc-string is sent to the LLM as the description of the schema Person,\n",
+    "    # and it can help to improve extraction results.\n",
+    "\n",
+    "    # Note that:\n",
+    "    # 1. Each field is an `optional` -- this allows the model to decline to extract it!\n",
+    "    # 2. Each field has a `description` -- this description is used by the LLM.\n",
+    "    # Having a good description can help improve extraction results.\n",
+    "    name: Optional[str] = Field(..., description=\"The name of the person\")\n",
+    "    hair_color: Optional[str] = Field(\n",
+    "        ..., description=\"The color of the person's hair if known\"\n",
+    "    )\n",
+    "    height_in_meters: Optional[str] = Field(...,\n",
+    "                                            description=\"Height in METERs\")\n",
+    "\n",
+    "\n",
+    "class Data(BaseModel):\n",
+    "    \"\"\"Extracted data about people.\"\"\"\n",
+    "\n",
+    "    # Creates a model so that we can extract multiple entities.\n",
+    "    people: List[Person]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Define reference examples\n",
+    "\n",
+    "Examples can be defined as a **list of input-output pairs**.\n",
+    "\n",
+    "Each example contains:\n",
+    "* Example input text\n",
+    "* Example output showing what should be extracted from the text\n",
+    "\n",
+    "> ### ℹ️ Important\n",
+    "> The **format** of the example needs to **match API used** (e.g., `tool calling` or `JSON mode` etc.).\n",
+    ">\n",
+    ">Here, *formatted examples will match format for tool calling API* (what we're using)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import uuid\n",
+    "from typing import Dict, List, TypedDict\n",
+    "\n",
+    "from langchain_core.messages import (\n",
+    "    AIMessage,\n",
+    "    BaseMessage,\n",
+    "    HumanMessage,\n",
+    "    SystemMessage,\n",
+    "    ToolMessage,\n",
+    ")\n",
+    "from pydantic import BaseModel, Field\n",
+    "\n",
+    "\n",
+    "class Example(TypedDict):\n",
+    "    \"\"\"A representation of an example consisting of text input and expected tool calls.\n",
+    "\n",
+    "    For extraction, the tool calls are represented as instances of pydantic model.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    input: str  # This is the example text\n",
+    "    # Instances of pydantic model that should be extracted\n",
+    "    tool_calls: List[BaseModel]\n",
+    "\n",
+    "\n",
+    "def tool_example_to_messages(example: Example) -> List[BaseMessage]:\n",
+    "    \"\"\"Convert an example into a list of messages that can be fed into an LLM.\n",
+    "\n",
+    "    This code is an adapter that converts our example to a list of messages\n",
+    "    that can be fed into a chat model.\n",
+    "\n",
+    "    The list of messages per example corresponds to:\n",
+    "\n",
+    "    1) HumanMessage: contains the content from which content should be extracted.\n",
+    "    2) AIMessage: contains the extracted information from the model\n",
+    "    3) ToolMessage: contains confirmation to the model that the model requested a tool correctly.\n",
+    "\n",
+    "    The ToolMessage is required because some of the chat models are hyper-optimized for agents\n",
+    "    rather than for an extraction use case.\n",
+    "    \"\"\"\n",
+    "    messages: List[BaseMessage] = [HumanMessage(content=example[\"input\"])]\n",
+    "    tool_calls = []\n",
+    "    for tool_call in example[\"tool_calls\"]:\n",
+    "        tool_calls.append(\n",
+    "            {\n",
+    "                \"id\": str(uuid.uuid4()),\n",
+    "                \"args\": tool_call.dict(),\n",
+    "                # The name of the function right now corresponds\n",
+    "                # to the name of the pydantic model\n",
+    "                # This is implicit in the API right now,\n",
+    "                # and will be improved over time.\n",
+    "                \"name\": tool_call.__class__.__name__,\n",
+    "            },\n",
+    "        )\n",
+    "    messages.append(AIMessage(content=\"\", tool_calls=tool_calls))\n",
+    "    tool_outputs = example.get(\"tool_outputs\") or [\n",
+    "        \"You have correctly called this tool.\"\n",
+    "    ] * len(tool_calls)\n",
+    "    for output, tool_call in zip(tool_outputs, tool_calls):\n",
+    "        messages.append(ToolMessage(\n",
+    "            content=output, tool_call_id=tool_call[\"id\"]))\n",
+    "    return messages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next let's define our examples and then convert them into message format."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_13080/951804369.py:45: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.10/migration/\n",
+      "  \"args\": tool_call.dict(),\n"
+     ]
+    }
+   ],
+   "source": [
+    "examples = [\n",
+    "    (\n",
+    "        \"The ocean is vast and blue. It's more than 20,000 feet deep. There are many fish in it.\",\n",
+    "        Data(people=[]),\n",
+    "    ),\n",
+    "    (\n",
+    "        \"Fiona traveled far from France to Spain.\",\n",
+    "        Data(\n",
+    "            people=[Person(name=\"Fiona\", height_in_meters=None, hair_color=None)]),\n",
+    "    ),\n",
+    "]\n",
+    "\n",
+    "\n",
+    "messages = []\n",
+    "\n",
+    "for text, tool_call in examples:\n",
+    "    messages.extend(\n",
+    "        tool_example_to_messages({\"input\": text, \"tool_calls\": [tool_call]})\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's test out the prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "system: content=\"You are an expert extraction algorithm. Only extract relevant information from the text. If you do not know the value of an attribute asked to extract, return null for the attribute's value.\" additional_kwargs={} response_metadata={}\n",
+      "human: content=\"The ocean is vast and blue. It's more than 20,000 feet deep. There are many fish in it.\" additional_kwargs={} response_metadata={}\n",
+      "ai: content='' additional_kwargs={} response_metadata={} tool_calls=[{'name': 'Data', 'args': {'people': []}, 'id': '6b9be669-bcfb-498f-ac8e-da7676555a1e', 'type': 'tool_call'}]\n",
+      "tool: content='You have correctly called this tool.' tool_call_id='6b9be669-bcfb-498f-ac8e-da7676555a1e'\n",
+      "human: content='Fiona traveled far from France to Spain.' additional_kwargs={} response_metadata={}\n",
+      "ai: content='' additional_kwargs={} response_metadata={} tool_calls=[{'name': 'Data', 'args': {'people': [{'name': 'Fiona', 'hair_color': None, 'height_in_meters': None}]}, 'id': 'd46fecdf-78d2-4349-80f2-bf526e3f10d1', 'type': 'tool_call'}]\n",
+      "tool: content='You have correctly called this tool.' tool_call_id='d46fecdf-78d2-4349-80f2-bf526e3f10d1'\n",
+      "human: content='this is some text' additional_kwargs={} response_metadata={}\n"
+     ]
+    }
+   ],
+   "source": [
+    "example_prompt = prompt.invoke(\n",
+    "    {\"text\": \"this is some text\", \"examples\": messages})\n",
+    "\n",
+    "for message in example_prompt.messages:\n",
+    "    print(f\"{message.type}: {message}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
