new tutorials &  better secret handling

--- a/5_extraction_examples.ipynb
+++ b/5_extraction_examples.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "> # [How to use reference examples when doing extraction](https://python.langchain.com/docs/how_to/extraction_examples/)\n",
-    "---\n",
+    "> ---\n",
     ">  *Build few-shot examples of tool calls to help steer the behavior of extraction & similar applications*\n",
     "\n",
     "\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "ChatPromptValue(messages=[SystemMessage(content=\"You are an expert extraction algorithm. Only extract relevant information from the text. If you do not know the value of an attribute asked to extract, return null for the attribute's value.\", additional_kwargs={}, response_metadata={}), HumanMessage(content='testing 1 2 3', additional_kwargs={}, response_metadata={}), HumanMessage(content='this is some text', additional_kwargs={}, response_metadata={})])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,13 +102,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define the schema\n",
+    "## Define the schema \n",
+    "> *(data classes to be extracted)*\n",
+    "\n",
     "Let's re-use the person schema from the [extraction tutorial](https://python.langchain.com/docs/tutorials/extraction/)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +215,7 @@
     "        tool_calls.append(\n",
     "            {\n",
     "                \"id\": str(uuid.uuid4()),\n",
-    "                \"args\": tool_call.dict(),\n",
+    "                \"args\": tool_call.model_dump(),\n",
     "                # The name of the function right now corresponds\n",
     "                # to the name of the pydantic model\n",
     "                # This is implicit in the API right now,\n",
@@ -235,23 +237,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next let's define our examples and then convert them into message format."
+    "### Define `examples` , convert them into message format"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_13080/951804369.py:45: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.10/migration/\n",
-      "  \"args\": tool_call.dict(),\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "examples = [\n",
     "    (\n",
@@ -283,21 +276,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "system: content=\"You are an expert extraction algorithm. Only extract relevant information from the text. If you do not know the value of an attribute asked to extract, return null for the attribute's value.\" additional_kwargs={} response_metadata={}\n",
-      "human: content=\"The ocean is vast and blue. It's more than 20,000 feet deep. There are many fish in it.\" additional_kwargs={} response_metadata={}\n",
-      "ai: content='' additional_kwargs={} response_metadata={} tool_calls=[{'name': 'Data', 'args': {'people': []}, 'id': '6b9be669-bcfb-498f-ac8e-da7676555a1e', 'type': 'tool_call'}]\n",
-      "tool: content='You have correctly called this tool.' tool_call_id='6b9be669-bcfb-498f-ac8e-da7676555a1e'\n",
-      "human: content='Fiona traveled far from France to Spain.' additional_kwargs={} response_metadata={}\n",
-      "ai: content='' additional_kwargs={} response_metadata={} tool_calls=[{'name': 'Data', 'args': {'people': [{'name': 'Fiona', 'hair_color': None, 'height_in_meters': None}]}, 'id': 'd46fecdf-78d2-4349-80f2-bf526e3f10d1', 'type': 'tool_call'}]\n",
-      "tool: content='You have correctly called this tool.' tool_call_id='d46fecdf-78d2-4349-80f2-bf526e3f10d1'\n",
-      "human: content='this is some text' additional_kwargs={} response_metadata={}\n"
+      "system:\n",
+      " \tcontent=\"You are an expert extraction algorithm. Only extract relevant information from the text. If you do not know the value of an attribute asked to extract, return null for the attribute's value.\" additional_kwargs={} response_metadata={}\n",
+      "\n",
+      "human:\n",
+      " \tcontent=\"The ocean is vast and blue. It's more than 20,000 feet deep. There are many fish in it.\" additional_kwargs={} response_metadata={}\n",
+      "\n",
+      "ai:\n",
+      " \tcontent='' additional_kwargs={} response_metadata={} tool_calls=[{'name': 'Data', 'args': {'people': []}, 'id': '375b7f02-c06b-4ee7-b2bf-761a3d41cd5d', 'type': 'tool_call'}]\n",
+      "\n",
+      "tool:\n",
+      " \tcontent='You have correctly called this tool.' tool_call_id='375b7f02-c06b-4ee7-b2bf-761a3d41cd5d'\n",
+      "\n",
+      "human:\n",
+      " \tcontent='Fiona traveled far from France to Spain.' additional_kwargs={} response_metadata={}\n",
+      "\n",
+      "ai:\n",
+      " \tcontent='' additional_kwargs={} response_metadata={} tool_calls=[{'name': 'Data', 'args': {'people': [{'name': 'Fiona', 'hair_color': None, 'height_in_meters': None}]}, 'id': 'e285eeff-c0f5-461b-81b0-6d47a223e443', 'type': 'tool_call'}]\n",
+      "\n",
+      "tool:\n",
+      " \tcontent='You have correctly called this tool.' tool_call_id='e285eeff-c0f5-461b-81b0-6d47a223e443'\n",
+      "\n",
+      "human:\n",
+      " \tcontent='this is some text' additional_kwargs={} response_metadata={}\n",
+      "\n"
      ]
     }
    ],
@@ -306,7 +315,154 @@
     "    {\"text\": \"this is some text\", \"examples\": messages})\n",
     "\n",
     "for message in example_prompt.messages:\n",
-    "    print(f\"{message.type}: {message}\")"
+    "    print(f\"{message.type}:\\n \\t{message}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create an extractor\n",
+    "\n",
+    "* will need a model that supports a tool-calling feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import getpass\n",
+    "import os\n",
+    "\n",
+    "if not os.environ.get(\"OPENAI_API_KEY\"):\n",
+    "    os.environ[\"OPENAI_API_KEY\"] = getpass.getpass(\n",
+    "        \"Enter API key for OpenAI: \")\n",
+    "\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "llm = ChatOpenAI(model=\"gpt-4-0125-preview\", temperature=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import getpass\n",
+    "import os\n",
+    "\n",
+    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
+    "os.environ[\"LANGCHAIN_API_KEY\"] = getpass.getpass()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Like the [extraction tutorial](https://python.langchain.com/docs/tutorials/extraction/), we use the `.with_structured_output` method to structure model outputs according to the desired schema:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "runnable = prompt | llm.with_structured_output(\n",
+    "    schema=Data,\n",
+    "    method=\"function_calling\",\n",
+    "    include_raw=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Without examples 😿"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "people=[]\n",
+      "people=[]\n",
+      "people=[]\n",
+      "people=[]\n",
+      "people=[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _ in range(5):\n",
+    "    text = \"The solar system is large, but earth has only 1 moon.\"\n",
+    "    print(runnable.invoke({\"text\": text, \"examples\": []}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## With examples 😻\n",
+    "\n",
+    "Reference examples helps to fix the failure!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "people=[]\n",
+      "people=[]\n",
+      "people=[]\n",
+      "people=[]\n",
+      "people=[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _ in range(5):\n",
+    "    text = \"The solar system is large, but earth has only 1 moon.\"\n",
+    "    print(runnable.invoke({\"text\": text, \"examples\": messages}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data(people=[Person(name='Harrison', hair_color='black', height_in_meters=None)])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "runnable.invoke(\n",
+    "    {\n",
+    "        \"text\": \"My name is Harrison. My hair is black.\",\n",
+    "        \"examples\": messages,\n",
+    "    }\n",
+    ")"
    ]
   },
   {
@@ -333,7 +489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
