--- a/1_llm_chain.ipynb
+++ b/1_llm_chain.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,8 @@
     "import os\n",
     "\n",
     "if not os.environ.get(\"OPENAI_API_KEY\"):\n",
-    "  os.environ[\"OPENAI_API_KEY\"] = getpass.getpass(\"Enter API key for OpenAI: \")\n",
+    "    os.environ[\"OPENAI_API_KEY\"] = getpass.getpass(\n",
+    "        \"Enter API key for OpenAI: \")\n",
     "\n",
     "from langchain_openai import ChatOpenAI\n",
     "\n",
