--- a/6_agents.ipynb
+++ b/6_agents.ipynb
@@ -39,28 +39,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import getpass\n",
     "import os\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "if not os.environ.get(\"OPENAI_API_KEY\"):\n",
-    "    os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+    "# Load secrets from file\n",
+    "with open('secrets.txt') as f:\n",
+    "    for line in f:\n",
+    "        if '=' in line:\n",
+    "            key, value = line.strip().split('=', 1)\n",
+    "            os.environ[key] = value\n",
     "\n",
+    "# Initialize LangChain\n",
     "from langchain_openai import ChatOpenAI\n",
-    "\n",
-    "model = ChatOpenAI(model=\"gpt-4\")\n",
-    "\n",
-    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
-    "os.environ[\"LANGCHAIN_API_KEY\"] = \"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\"\n",
-    "\n",
-    "# Set the ANTHROPIC_API_KEY environment variable\n",
-    "os.environ['ANTHROPIC_API_KEY'] = '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'\n",
-    "\n",
-    "# Set the TAVILY_API_KEY environment variable\n",
-    "os.environ['TAVILY_API_KEY'] = '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'"
+    "model = ChatOpenAI(model=\"gpt-4\")"
    ]
   },
   {
